[project]
name = "muyaho"
version = "0.1.0"
description = "A funny data structure library"
authors = [{ name = "wonjongin", email = "wji0227@naver.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
packages = [{ include = "muyaho", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
